--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
-div class="main">
-	<div class="container">
-    <h1> Hello my name is Jonny B. </h1>
-    <p> I make Rails apps.</p>
-  </div>
-</div>
+<!DOCTYPE html>
+<html>
+  <body>
+    <div class='header'>
+      <h1 align="center">This is heading 1</h1>
+    </div </body>
+  </html>
