--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -11,6 +11,7 @@ body {
   margin: 0;
 }
 body {
+
   // background-image: url('http://s3.amazonaws.com/codecademy-content/courses/learn-rails/img/bg-static.jpg');
   background-image: url("arkcorp.jpg");
   background-repeat: no-repeat;
@@ -18,7 +19,6 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-// **********************BELOW IS TEST CODE CAN BE UNSTABLE*********************************
 /*I love me some border-box*/
 * {
   box-sizing: border-box;
@@ -44,8 +44,7 @@ body {
   z-index: 10;
   height: 100px;
 }
-
-.Rank{
+.Rank {
   background-image: url("General_Grade_One.png");
   background-position: center;
   display: flex;
@@ -69,11 +68,9 @@ body {
   backface-visibility: hidden;
   will-change: overflow;
 }
-
 .Container:hover {
   background-image: url("bluecolormaphover.png");
 }
-
 .topleftcorner {
   position: absolute;
   top: 6px;
@@ -81,21 +78,17 @@ body {
   height: 9px;
   width: 9px;
 }
-
 .toprightcorner {
   position: absolute;
   top: 6px;
   right: 8px;
   height: 9px;
   width: 9px;
-
 }
-
 .Container:hover .topleftcorner {
   top: 1px;
   left: 1px;
 }
-
 .Container:hover .toprightcorner {
   top: 1px;
   right: 1px;
@@ -117,4 +110,47 @@ WebKit inertia scrolling is being added here for any present/future devices that
 /*  Left and Right are set sizes while the Middle is set to flex one so it occupies all remaining space. This could be set as a width too if prefereable, perhaps using calc.*/
 .Middle {
   flex: 1;
+}
+
+// **********************BELOW IS TEST CODE CAN BE UNSTABLE*********************************
+.format {
+
+  // text-shadow:1px 1px 1px rgba(NaN,NaN,NaN,1);
+  font-weight: bold;
+  color: #96d9ff;
+  letter-spacing: 1pt;
+  word-spacing: 2pt;
+  font-size: 15px;
+  text-align: left;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1;
+}
+.boxformat {
+  display: block;
+  margin: 0;
+  font-family: sans-serif;
+  font-size: 18px;
+  color: #78adcc;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  background: transparent;
+  width: 30%;
+}
+.boxformat:focus {
+  outline: none;
+}
+.boxformat {
+  border: none;
+  border: 1px #78adcc;
+  border-style: solid;
+}
+.boxformat:focus,
+.boxformat.focus {
+  border: inset 1px #78adcc;
+
+}
+
+textarea.boxformat {
+  width: 50%;
 }
